Version 0.1.0
+ Init

Verison 0.2.0
* Fix sub package checking bug
+ Support Ant pattern

Version 0.3.0
* Remove Environment argument in RoutingPathResolver constructor
* Fix the bug of findByRequestPathAndMethod
+ RegexPath now can accept the first slash of an URL as optional
+ RegexPath now can accept the last slash of an URL as optional if user not mentions

Version 0.4.0
- Remove RubyCollect4J dependency
* Fix the bug of reading the path from path() instead of value()
+ Add support for @GetMapping, @PostMapping, @DeleteMapping, @PutMapping, @PatchMapping

Version 0.5.0
+ Add parameter annotations

Version 0.6.0
* Java 8 required