@@ -9,7 +9,7 @@ An easy way to find out all routing paths in Spring annotated controllers.
 <dependency>
 	<groupId>com.github.wnameless.spring</groupId>
 	<artifactId>spring-routing-resolver</artifactId>
-	<version>0.5.0</version>
+	<version>0.6.0</version>
 </dependency>
 ```
 ## Important
@@ -17,6 +17,7 @@ Since v0.4.0, @GetMapping, @PostMapping, @DeleteMapping, @PutMapping, @PatchMapp
 
 Before v0.4.0, this library only reads the url inside @RequestMapping(value="/path"), but leaves the url inside @RequestMapping(path="/path") unread, it has been fixed after v0.4.0.
 
+Since v0.6.0, the minimal Java requirement is 8 and the Java Module is also supported.
 # Quick Start
 ```java
 @Autowired
