@@ -21,3 +21,4 @@ Version 0.5.0
 
 Version 0.6.0
 * Java 8 required
++ Java 9 Module supported
